--- a/template/index.html
+++ b/template/index.html
@@ -8,14 +8,15 @@
         <script language = "javascript" src="../static/js/data.js"></script>
         <script language = "javascript" src="../static/js/jquery-1.11.3.js"></script>
         <script language = "javascript" src="../static/js/d3.min.js"></script>
+        
+        <script language = "javascript" src="../static/js/properties.js"></script>
+        <script language = "javascript" src="../static/js/generate_graph.js"></script>
+        <script language = "javascript" src="../static/js/script.js"></script>
     </head>
     <body>
         <div id = "container">
-            <div id = "display">
-            
-            </div>   
+               
         </div>
-        <script language = "javascript" src="../static/js/generate_graph.js"></script>
-        <script language = "javascript" src="../static/js/script.js"></script>
+        
     </body>
 </html>
