--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
         content="application/xhtml+xml; charset=utf-8"/>
 <html>
     <head>
-        <title>Have some fun</title>
+        <title>Graph</title>
         <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
         <script language = "javascript" src="../static/js/data.js"></script>
         <script language = "javascript" src="../static/js/jquery-1.11.3.js"></script>
