--- a/template/index.html
+++ b/template/index.html
@@ -10,7 +10,7 @@
         <script language = "javascript" src="../static/js/d3.min.js"></script>
         
         <script language = "javascript" src="../static/js/properties.js"></script>
-        <script language = "javascript" src="../static/js/generate_graph.js"></script>
+        <script language = "javascript" src="../static/js/ui.js"></script>
         <script language = "javascript" src="../static/js/script.js"></script>
     </head>
     <body>
