RequireJS config working

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,10 +4,10 @@
     <title>
       Graph
     </title>
-    <script data-main="../scripts/config" src="../../bower_components/requirejs/require.js"></script>
+    <script data-main="scripts/config" src="vendor/requirejs/require.js"></script>
     <script>
       require(['config'], () => {
-        require(['src/scripts/main']);
+        require(['main']);
       });
     </script>
   </head>
