Require JS removed, browserify introduced

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,12 +4,7 @@
     <title>
       Graph
     </title>
-    <script data-main="scripts/config" src="vendor/requirejs/require.js"></script>
-    <script>
-      require(['config'], () => {
-        require(['main']);
-      });
-    </script>
+    <script type="text/javascript" src="scripts/bundle.js"></script>
   </head>
   <body>
     <div id="container">
