Set up working with gulp, browserify, nodemon and broeser-sync

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,10 +4,12 @@
     <title>
       Graph
     </title>
-    <script type="text/javascript" src="scripts/bundle.js"></script>
+    <link rel="stylesheet" type="text/css" href="dist/stylesheets/index.css"/>
+    <script type="text/javascript" src="dist/graph.js"></script>
   </head>
   <body>
     <div id="container">
+      <p>what is your name?</p>
     </div>
   </body>
 </html>
