--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,5 @@
-#container {
-  border: 1px solid;
-  background-color: #0066cc;
-  width: 400px;
-  height: 400px;
+* {
+  margin: 0;
+  padding: 0;
 }
+
