--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,5 @@
   padding: 0;
 }
 
+@import './node_modules/angular-material/angular-material.scss';
+@import './graph.app.container/graph.app.container';
